# OM-DAO-API

./: .env_example  .env_letsencrypt_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py  script.py.mako
alembic/versions/: 4c18865d172b_init.py
app/: main.py
app/adapters/: __init__.py  fastapi.py  web3_adapter.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/endpoints/: tokens.py
app/config/: database.py  deps.py  settings.py
app/config/abi/: omd_abi.json
app/models/: __init__.py  config.py  transaction.py
app/schemas/: __init__.py  config.py  token.py  transaction.py
app/services/: __init__.py  tokens.py
app/storages/: __init__.py  postrgresql.py
nginx/vhost.d/: default
