[tool.poetry]
name = "test-om-dao-api"
version = "0.1.0"
description = ""
authors = ["aleksandrkaekhtin <kaehtin.aa@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
web3 = "^5.31.3"
SQLAlchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.2"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
